[build] Re-introduce Java 8 compatibility