@@ -7,19 +7,16 @@
 
 package org.jruby.rack;
 
-import java.io.IOException;
-import java.io.LineNumberReader;
-import java.io.OutputStream;
-import java.io.PrintStream;
-import java.io.StringReader;
+import org.jruby.rack.logging.OutputStreamLogger;
+import org.jruby.rack.logging.StandardOutLogger;
+import org.jruby.util.SafePropertyAccessor;
+
+import java.io.*;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.Map;
-import org.jruby.rack.logging.OutputStreamLogger;
-import org.jruby.rack.logging.StandardOutLogger;
-import org.jruby.util.SafePropertyAccessor;
 
 /**
  * A base implementation of that retrieves settings from system properties.
@@ -382,7 +379,7 @@ public class DefaultRackConfig implements RackConfig {
                 for ( final String entry : entries ) {
                     String[] pair = entry.split("=", 2);
                     if ( pair.length == 1 ) { // no = separator
-                        if ( entry.isBlank() ) continue;
+                        if ( entry.trim().isEmpty() ) continue;
                         if ( lastKey == null ) continue; // missing key
                         map.put( lastKey, lastVal = lastVal + ',' + entry );
                     }
